packages/evelyn-ci/modules/buildkitd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: buildkitd
spec:
  entryPoints:
  - websecure
  routes:
  # Match is the rule corresponding to an underlying router.
  - match: HostSNI(`buildkit.evelyn.internal`)
    services:
    - name: buildkitd
      port: 8999
      terminationDelay: 400
      weight: 10
  tls:
    domains:
      - main: buildkit.evelyn.internal
    secretName: buildkitd-ingress-certs
    passthrough: true
